# studierbot

./: CMakeLists.txt  package.xml
include/studierbot_drive/: MotorControllerCAN.h
launch/: studierbot_with_joy2vel.launch.py  studierbot_with_joy_and_cam.launch.py
scripts/: can.service
src/: MotorControllerCAN.cpp  simple_joy2vel_node.cpp  studierbot_drive_node.cpp
src/interface/: SocketCAN.cpp  SocketCANObserver.cpp
